fix: logo sizing on mobiles

--- a/src/Assets/Styles/header.css
+++ b/src/Assets/Styles/header.css
@@ -107,4 +107,9 @@ header .btn {
         display: flex;
         flex-direction: column;
     }
+
+    header .header-logo #header-logo-img {
+        width: 38px;
+        margin-right: 5px;
+    }
 }
